# nak-district-planner

./: .env.example  .gitignore  .markdownlint.json  .mega-linter.yml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  MIGRATION_GUIDE.md  Makefile  PHASE4B_IMPLEMENTATION.md  PHASE4B_TEST_REPORT.md  PHASE_4B_SUMMARY.md  PROJEKTFAHRPLAN.md  README.md  development_guide.md  docker-compose.override.yml  docker-compose.yml  package.json  release-please-config.json  release_notes.md  spec.md  use_cases.md  verify-phase4b-compatibility.sh
services/backend/: .env.example  Dockerfile  alembic.ini  check_db.py  pyproject.toml  repro_crypto.py  seed_testdata.py  test_categorization.py
services/backend/alembic/: env.py
services/backend/alembic/versions/: 0001_initial.py  0002_calendar_integrations.py  0003_calendar_integration_congregation.py  0004_export_tokens.py  0005_congregation_service_times.py  0006_calendar_integration_default_category.py  0007_district_state_code.py  0008_create_users_table.py  0008_leaders.py  0009_create_memberships_table.py  0009_leader_rank.py  0010_leader_registrations.py  0011_planning_model_foundation.py  0012_audit_logs.py  0123_matrix_migration_add_planning_slot_fields.py  0124_create_notifications_table.py  0125_remove_events_add_sync_fields.py  3b7d9e1a4c20_leader_user_link_and_seed_data.py  4c9a2d7e8f10_user_superadmin_flag.py  ae6c055cc050_merge_heads.py  ae6c055cc051_merge_0125_with_0012.py  b15c9d3e4f21_invitation_workflow.py  c9f2a4b1d3e0_add_generation_slot_key.py  d2c4f8a9b1e0_registration_approval_scope_fields.py  e4b2a9d7f110_registration_idp_provisioning_fields.py  e5a2b3c4d5f0_add_approval_status.py  ed967c737376_merge_planning_model_with_main_chain.py  faecec299731_add_congregation_groups.py
services/backend/app/: celery_app.py  config.py  main.py  telemetry.py  tenant.py
services/backend/app/adapters/api/: deps.py
services/backend/app/adapters/api/middleware/: __init__.py  audit.py  csrf.py  rate_limit.py  tenant.py
services/backend/app/adapters/api/routers/: auth.py  calendar_integrations.py  districts.py  events.py  events_compat.py  export.py  invitations.py  leaders.py  notifications.py  planning_series.py  registrations.py  service_assignments.py  system.py
services/backend/app/adapters/api/schemas/: calendar_integration.py  district.py  event.py  export_token.py  invitation.py  leader.py  matrix.py  planning_series.py  registration.py  service_assignment.py  system.py  user.py
services/backend/app/adapters/auth/: __init__.py  claims_validation.py  jwt_claims.py  notifications.py  oidc.py  permissions.py
services/backend/app/adapters/calendar/: __init__.py  caldav_connector.py  google_connector.py  ical_connector.py  microsoft_connector.py
services/backend/app/adapters/db/: base.py  session.py
services/backend/app/adapters/db/migrations/: rls_policies.py
services/backend/app/adapters/db/orm_models/: __init__.py  audit_log.py  calendar_integration.py  congregation.py  congregation_group.py  district.py  event.py  event_instance.py  export_token.py  external_event_link.py  invitation.py  invitation_overwrite_request.py  leader.py  leader_registration.py  membership.py  notification.py  planning_series.py  planning_slot.py  service_assignment.py  user.py
services/backend/app/adapters/db/repositories/: __init__.py  audit_log.py  calendar_integration.py  congregation.py  congregation_group.py  district.py  event.py  event_instance.py  export_token.py  external_event_link.py  invitation.py  invitation_overwrite_request.py  leader.py  leader_registration.py  membership.py  notification.py  planning_series.py  planning_slot.py  service_assignment.py  user.py
services/backend/app/adapters/idp/: __init__.py  base.py  keycloak_provisioner.py  provisioning.py  webhook_provisioner.py
services/backend/app/adapters/version_check/: cache.py  ghcr.py
services/backend/app/application/: audit_service.py  crypto.py  csrf.py  deviation_service.py  draft_service_generation.py  feiertage_service.py  init.py  invitation_service.py  matrix_service.py  notification_service.py  planning_model_bridge.py  planning_series_generator.py  planning_series_service.py  rate_limiter.py  sync_service.py  tasks.py  tenant_validation.py
services/backend/app/domain/models/: __init__.py  audit_log.py  calendar_integration.py  congregation.py  congregation_group.py  district.py  event.py  event_instance.py  export_token.py  external_event_link.py  invitation.py  leader.py  leader_registration.py  membership.py  notification.py  planning_series.py  planning_slot.py  raw_calendar_event.py  role.py  service_assignment.py  user.py
services/backend/app/domain/ports/: calendar.py  planning_series_service.py  repositories.py
services/backend/scripts/: check_fk_names.py  check_rbac_guard_pattern.py
services/backend/tests/integration/: test_csrf_middleware.py  test_matrix_endpoint.py  test_protected_endpoints.py  test_version_endpoint.py
services/backend/tests/unit/: test_audit_middleware.py  test_audit_service.py  test_auth_permissions_jwt_claims.py  test_auto_categorization.py  test_caldav_connector.py  test_caldav_connector_unit.py  test_cleanup_task.py  test_congregation_model.py  test_cross_tenant_isolation.py  test_crypto.py  test_csrf.py  test_deps.py  test_district_group_validation.py  test_draft_service_generation.py  test_feiertage_service.py  test_get_current_user.py  test_google_connector.py  test_ical_connector.py  test_invitation_service.py  test_main_module.py  test_matrix_service.py  test_microsoft_connector.py  test_misc_low_coverage_modules.py  test_notification.py  test_notifications_router.py  test_oidc_adapter.py  test_planning_model_bridge.py  test_planning_repositories.py  test_planning_series_generator.py  test_planning_series_service.py  test_production_guard.py  test_provisioning_unit.py  test_rate_limiter.py  test_registrations.py  test_repositories_more.py  test_router_auth.py  test_router_calendar_export_invitation.py  test_router_districts.py  test_router_leaders_events_assignments.py  test_router_registrations_unit.py  (+10 more)
(+346 files in other folders)
