[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nak-district-planner-backend"
version = "0.23.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[sqlalchemy]>=5.6.3",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "PyJWT[crypto]>=2.13.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27",
    "authlib>=1.7.2",
    "mako>=1.3.12",
    "icalendar>=7.1.2",
    "cryptography>=48.0.1",
    "defusedxml>=0.7",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "opentelemetry-instrumentation-celery>=0.63b1",
    "redis>=5.0.0",
    "requests>=2.33.1",
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "D", "RUF"]
ignore = [
    "B008",  # Function call in defaults (FastAPI pattern)
    "B904",  # Exception chaining in HTTPException (intentional)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method (repositories)
    "D103",  # Missing docstring in public function (API endpoints)
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line
    "D202",  # Missing blank line before nested definition
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D413",  # Missing blank line after last section
    "D415",  # First line should end with a period, question mark, or exclamation point
    "E402",  # Import might perform runtime check based on mocked value
    "E501",  # Line too long (let IDE handle wrapping)
    "F401",  # Unused imports (type hints - common in repositories)
    "N806",  # Variable naming in tests (Mock patterns)
    "B017",  # Blind exception in tests
    "N817",  # CamelCase in function name (intentional: EventStatus)
    "RUF001",  # Ambiguous dash in string (intentional: German text)
    "RUF003",  # Ambiguous dash in comment (intentional: German text)
    "RUF022",  # __all__ sort order verification
    "RUF100",  # Unused noqa directive
    "UP017",  # datetime.UTC usage is fine for existing code
    "UP042",  # Class inherits from both str and enum.Enum (common pattern)
    "W291",  # Trailing whitespace (intentional in comments)
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.18",
]
